--- a/dashboard/templates/dashboard/includes/footer.html
+++ b/dashboard/templates/dashboard/includes/footer.html
@@ -6,8 +6,8 @@
       </li>
     </ul>
     <div class="copyright">
-      &copy; <a target="_blank" href="#">Ambivert Technologies Private Limited</a>
-      | Made with &#10084; by <a target="_blank" href="https://github.com/gairick-saha">Gairick Saha</a>
+      &copy; <a target="_blank" href="#">SK SAYED AKTAR</a>
+      | Made with &#10084; by <a target="_blank" href="https://github.com/SK-SAYED-AKTAR">Sk Sayed Aktar</a>
     </div>
   </div>
 </footer>
