--- a/dashboard/templates/dashboard/includes/footer.html
+++ b/dashboard/templates/dashboard/includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <ul class="nav">
       <li class="nav-item">
-        OCR Dashboard
+        Dashboard
       </li>
     </ul>
     <div class="copyright">
